# DiscordBot

./: README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: main.yml
src/: bot.py  utils.py
