[tool.poetry]
name = "my-discord-bot"
version = "0.1.0"
description = "Bot Discord avec DeepSeek"
authors = ["BoubkerBENNANI <boubker.bennani.pro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
# Ajoutez ici vos dépendances de développement si nécessaire
# pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"